# celestetools

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
crates/annotate_celeste_map/: Cargo.toml
crates/annotate_celeste_map/src/: cct_physics_inspector.rs  lib.rs
crates/celestedebugrc/: Cargo.toml
crates/celestedebugrc/examples/: debugrc.rs
crates/celestedebugrc/src/: lib.rs
crates/celesteloader/: Cargo.toml
crates/celesteloader/examples/: atlas.rs  compare_timesave.rs  dialog.rs  entity_counter.rs  extract_map_name.rs  parse_modded_maps.rs  print_golden_berries.rs  printmap.rs  read_lobby.rs  saves.rs
crates/celesteloader/src/: archive.rs  atlas.rs  binaryreader.rs  cct_physics_inspector.rs  dialog.rs  lib.rs  save.rs  steam_locate.rs  tileset.rs
crates/celesteloader/src/cct_physics_inspector/: compare_timesave.rs  mod.rs
crates/celesteloader/src/map/: decode.rs  mod.rs  utils.rs
crates/celesterender/: Cargo.toml
crates/celesterender/examples/: bit.lua  loadlua.rs
crates/celesterender/src/: asset.rs  lib.rs  rendering.rs
crates/celesterender/src/rendering/: entity.rs  mod.rs  tileset.rs
crates/celesterender/src/rendering/entity/: entity_impls.rs  nine_patch.rs
crates/cmaploader/: Cargo.toml
crates/cmaploader/examples/: dialog.rs  extract_map_name.rs  gen_lobby_order.rs  print_golden_berries.rs  printmap.rs  read_lobby.rs
crates/cmaploader/src/: archive.rs  decode.rs  dialog.rs  lib.rs
crates/cmaploader/src/map/: mod.rs
crates/collab_boilerplate/: Cargo.toml
crates/collab_boilerplate/examples/: debug.rs
crates/lobby2table/: Cargo.toml
crates/lobby2table/src/: main.rs
crates/map_annotate/: Cargo.toml
crates/map_annotate/src/: cct_physics_inspector.rs  lib.rs  main.rs
crates/tools/: Cargo.toml
docs/: publish.sh
