[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT"
repository = "https://github.com/jakobhellermann/celestetools"
version = "0.2.0"

[workspace.dependencies]
celesteloader = { path = "crates/celesteloader", version = "0.2" }
celesterender = { path = "crates/celesterender", version = "0.2" }
celestedebugrc = { path = "crates/celestedebugrc", version = "0.2" }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
