[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
license = "MIT"
repository = "https://github.com/jakobhellermann/celestetools"
version = "0.3.0"

[workspace.dependencies]
celesteloader = { path = "crates/celesteloader", version = "0.3" }
celesterender = { path = "crates/celesterender", version = "0.3" }
celestedebugrc = { path = "crates/celestedebugrc", version = "0.3" }

[profile.dev.package."*"]
opt-level = 2

[profile.release]
debug = true
