[package]
name = "annotate_celeste_map"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
celesteloader = { path = "../celesteloader" }
csv = "1.3.0"
image = { version = "0.24", default-features = false, features = ["png"] }
imageproc = { version = "0.23" } 
rusttype = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
paris = { version = "1.5", features = ["macros"] }
opener = "0.6.1"
