[package]
name = "annotate_celeste_map"
description = "Tool for rendering celeste maps, and overlaying recorded paths, lobby entrances etc."
license.workspace = true
repository.workspace = true
version = "0.1.0"
edition = "2021"

[dependencies]
celesteloader = { path = "../celesteloader", version = "0.1" }
celesterender = { path = "../celesterender", version = "0.1" }
celestedebugrc = { path = "../celestedebugrc", version = "0.1" }
anyhow = "1.0"
csv = "1.3"
image = { version = "0.24", default-features = false, features = ["png"] }
tiny-skia = "0.11"
imageproc = { version = "0.23" } 
rusttype = "0.9"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
paris = { version = "1.5", features = ["macros"] }
opener = "0.6"
