[package]
name = "celesteloader"
description = "Code for working with Maps, Assets, and Mods for the game Celeste"
license.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[dependencies]
unicase = "2.7.0"
anyhow = "1.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
image = { version = "0.24", default-features = false }

serde = { version = "1.0", features = ["derive"] }
roxmltree = "0.19"
serde-roxmltree = "0.7"
serde_json = "1.0"
csv = "1.3"
yaml-rust2 = { version = "0.8", default-features = false, optional = true }

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.52"

[target.'cfg(not(target_os="windows"))'.dependencies]
dirs = "5.0"

[dev-dependencies]
anyhow = "1.0"

[features]
default = ["settings"]
settings = ["dep:yaml-rust2"]
