[package]
name = "celesterender"
version = "0.1.0"
edition = "2021"

[features]
tracing_chrome = ["tracing-chrome"]

[dependencies]
anyhow = "1.0"
celesteloader = { path = "../celesteloader" }
elsa = "1.10"
fastrand = "2.0"
roxmltree = "0.19"
serde-roxmltree = "0.7"
tiny-skia = "0.11"
rayon = "1.9"
tracing = { version = "0.1" }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false }


[dev-dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
