[package]
name = "celesterender"
description = "Renders celeste maps"
license.workspace = true
repository.workspace = true
version.workspace = true
edition = "2021"

[features]
tracing_chrome = ["tracing-chrome", "tracing-subscriber"]
tracing_detailed = []

[dependencies]
celesteloader.workspace = true
anyhow = "1.0"
elsa = "1.10"
fastrand = "2.0"
roxmltree = "0.20"
serde-roxmltree = "0.9"
tiny-skia = "0.11"
png = "0.18"
rayon = "1.9"
tracing = { version = "0.1" }
tracing-chrome = { version = "0.7", optional = true }
tracing-subscriber = { version = "0.3.18", default-features = false, optional = true }


[dev-dependencies]
mlua = { version = "0.9", features = ["lua54", "vendored"] }
