[package]
name = "map_annotate"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.80"
cmaploader = { path = "../cmaploader" }
csv = "1.3.0"
image = { version = "0.24", default-features = false, features = ["png"] }
imageproc = { version = "0.23" } 
rusttype = "0.9"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
